--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 
+
 #5
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #6\u4EE5\u4E0A
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.url=jdbc:mysql://localhost:3306/shopping?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://47.94.202.182:3306/shopping?useUnicode=true&characterEncoding=utf8
 
 #thymeleaf\u6A21\u677F\u5F15\u64CE
 spring.thymeleaf.cache=false
@@ -19,7 +20,7 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-#\u6587\u4EF6\u4E0A\u4F20
+#\u6587\u4EF6\u4E0A\u4F20  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
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
