--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,8 @@ spring.resource.path=/upload/
 spring.resource.path.pattern=/upload/**
 # location absolute path
 spring.resource.folder.windows=g:/upload/
-spring.resource.folder.linux=/upl
+spring.resource.folder.linux=/home/upload/
+
 
 #shiro
 shiro.web.enabled=true
